--- a/any-proxy/doc/配置文件结构.md
+++ b/any-proxy/doc/配置文件结构.md
@@ -4,13 +4,15 @@ any-proxys/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
 ```
 
 # 配置文件特性
+```
 类似nginx高度模块化框架  
 快速添加协议监听和代理回源（tcp、quic、ssl、http、websocket）  
 动态添加模块  
 配置文件由各自模块独立解析   
 支持配置块读取, 负载配置自己使用json、toml在进行解析  
-r```
+xxx raw = r```
 ```r
+```
 
 #支持include
 
