--- a/any-proxy/doc/配置文件结构.md
+++ b/any-proxy/doc/配置文件结构.md
@@ -9,7 +9,7 @@ any-proxys/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf
 快速添加协议监听和代理回源（tcp、quic、ssl、http、websocket）  
 动态添加模块  
 配置文件由各自模块独立解析   
-支持配置块读取, 负载配置自己使用json、toml在进行解析  
+支持配置块读取, 配置模块自己使用json、toml在进行解析  
 xxx raw = r```
 ```r
 ```
