--- a/any-proxy/doc/信号处理.md
+++ b/any-proxy/doc/信号处理.md
@@ -1,28 +1,47 @@
-# 正常停止
+# 最大等待流时间
+```
 common {
-    #reload和reinit等待流时间，时间到强制退出
     shutdown_timeout u64 = 30;    #default 30
 }
+```
 
-等待上面配置时间后停止  
+# 正常停止
+```
+shutdown_timeout时间超时，强制停止
 ./anyproxy -s quit 或 /bin/kill -s QUIT $MAINPID  或 ctrl_c(SIGINT)   
+```
 
 # 快速停止
-马上停止，不管是否有流在使用  
+```
+马上停止，强制断流
 ./anyproxy -s stop 或 /bin/kill -s TERM $MAINPID  
+```
 
 # 刷新配置
+```
 不用创建线程，无感应热更新配置  
 ./anyproxy -s reload 或 /bin/kill -s HUP $MAINPID  
+```
 
 # 重新创建线程和刷新配置
-根据最新配置重新创建线程并优雅退出旧线程，对udp、quic、any-tunnel、any-tunnel2协议有影响  
+```
+根据最新配置重新创建线程并优雅退出旧线程，对udp、quic、any-tunnel协议有影响，后续会用ebpf解决  
 ./anyproxy -s reinit 或 /bin/kill -s USR1 $MAINPID  
+```
 
 # 检查配置
-检查配置是否能正常使用  
+```
+检查配置是否正确
 ./anyproxy -t 或 /bin/kill -s USR2 $MAINPID  
+```
 
 # 指定配置路径
+```
 启动进程指定配置路径  
 ./anyproxy -c ./conf/anyproxy.conf  
+```
+
+# 热升级程序
+```
+anyproxy --hot ./logs/anyproxy.pid
+```
