--- a/any-proxy/doc/配置文件结构.md
+++ b/any-proxy/doc/配置文件结构.md
@@ -1,20 +1,156 @@
+# 配置文件框架
 ```
-参考下面路径的文件
+ebpf {
+}
+
+tunnel {
+}
+
+tunnel2 {
+}
+
+common {
+}
+
+socket {
+}
+
+upstream {
+    server {
+    }
+
+    server {
+    }
+}
+
+http {
+    server {
+        local {
+        }
+    }
+    server {
+        local {
+        }
+    }
+}
+```
+# 配置文件介绍
+```
+配置文件例子路径：
+any-proxys/any-proxy/examples/anyproxy/examples/conf/
+全部配置文件：
 any-proxys/any-proxy/examples/anyproxy/examples/conf/anyproxy_demo.conf 
+测试源站配置文件：
+any-proxys/any-proxy/examples/anyproxy/examples/conf/anyproxy_origin.conf
+测试中转节点配置文件：
+any-proxys/any-proxy/examples/anyproxy/examples/conf/anyproxy_proxy_to_origin.conf
+测试边缘节点配置文件：
+any-proxys/any-proxy/examples/anyproxy/examples/conf/anyproxy_edge_to_proxy.conf
+各种配置文件例子：
+any-proxys/any-proxy/examples/anyproxy/examples/conf/more_conf/
 ```
 
 # 配置文件特性
 ```
-类似nginx高度模块化框架  
-快速添加协议监听和代理回源（tcp、quic、ssl、http、websocket）  
-动态添加模块  
-配置文件由各自模块独立解析   
-支持配置块读取, 配置模块自己使用json、toml在进行解析  
-xxx raw = r```
-```r
+类似nginx配置文件格式
+支持配置块
+支持include
+支持配置继承、合并等
+支持行注释
+支持块注释
+支持跨平台
+```
+#配置文件include
+```
+读取路径相对与当前配置文件路径
+include  = ./anyproxy_edge_to_proxy_10m.conf;
 ```
 
-#支持include
+#单行注释
+```
+#我是单行注释
+```
+
+#块注释
+```
+r###
+我是块注释1
+我是块注释2
+我是块注释3
+我是块注释4
+###r
+```
+
+
+#配置文件格式和类型
+#例子：
+```
+is_tmp_file_io_page bool= true;
+stream_cache_size usize = 131072;
+```
+
+#跨平台格式：
+```
+全部平台都会去解析
+name bool = value;
+name usize = 131072;
+只有window平台使用
+name window_bool = value;
+name window_usize = 131072;
+只有linux平台使用
+name linux_bool = value;
+name linux_usize = 131072;
+```
+
+#类型：
+#单变量类型：
+```
+name bool = true;
+
+name i8 = 0;
+name i16 = 0;
+name i32 = 0;
+name isize = 0;
+name i64 = 0;
+
+name u8 = 0;
+name u16 = 0;
+name u32 = 0;
+name usize = 0;
+name u64 = 0;
+
+name f64 = 0.0;
+
+name str = 1234; 或 name str = "12   34";
+```
+
+#列表类型：
+```
+name i8s = 0 1 2; 
+name i16s = 0 1 2;
+name i32s = 0 1 2;
+name isizes = 0 1 2;
+name i64s = 0 1 2;
+
+name u8s = 0 1 2; 
+name u16s = 0 1 2;
+name u32s = 0 1 2;
+name usizes = 0 1 2;
+name u64s = 0 1 2;
+
+name f64s = 0.0 1.0 2.0;
+
+name strs = 00 11 22; 或 name strs = "00 11 22"; 或 name strs = "0 0" "1 1" "2 2";
+```
+
+#配置块类型：
+```
+配置块里面数据会原封不动给模块解析， 可以是任何特殊字符串、toml数据、json数据等
+name raw = r```
+    ssl_domain= "www.example.cn"
+    address = "www.upstream.cn:19091"
+```r;
+```
 
 
 
